# learn-drf-keycloak

./: .env.example  README.md  docker-compose-keycloak.yml  keycloak-realm.json  main.py  pyproject.toml  tests.sh
backend/config/: settings.py  urls.py
backend/custom_auth/: jwt_util.py
backend/users/: authentication.py  authentication_custom.py  models.py  permissions.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py
