[project]
name = "learn-drf-keycloak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=4.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.14",
    "drf-spectacular>=0.29.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-keycloak>=3.0",
]
